--- a/src/custom-css/calendar.css
+++ b/src/custom-css/calendar.css
@@ -82,3 +82,127 @@
     margin-bottom: 12px;
   }
 }
+
+/* Live Video */
+.live-video-section {
+  background-image: url("../assets/images/crd-bg-video.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* height: 80vh; */
+  /* margin-top: 100px; */
+}
+
+.live-description {
+  padding: 25px;
+  position: relative !important;
+}
+
+.live-video-section span {
+  font-size: 16px;
+  color: #d04a48;
+}
+
+.live-video-section h6 {
+  font-size: 50px;
+  color: #1a1a1a;
+  font-weight: 700;
+}
+
+.live-video-section p {
+  font-size: 18px;
+  color: #767676;
+  font-weight: 500;
+}
+
+.play-icon {
+  width: 75px;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  background-color: #d04a48;
+  color: #fff;
+  font-size: 32px;
+}
+
+.fa-play {
+  z-index: 2;
+}
+
+.join-us-live {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  background-color: #d04a48;
+  color: #fff;
+  padding: 10px 30px;
+  border: none;
+  margin-top: 30px;
+  width: fit-content;
+}
+
+/* Swiper */
+.swiper {
+  width: 60vw;
+}
+
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.autoplay-progress {
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+  z-index: 10;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: var(--swiper-theme-color);
+}
+
+.autoplay-progress svg {
+  --progress: 0;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  stroke-width: 4px;
+  stroke: var(--swiper-theme-color);
+  fill: none;
+  stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
+  stroke-dasharray: 125.6;
+  transform: rotate(-90deg);
+}
+
+@media screen and (max-width: 990px) {
+  .swiper {
+    width: 300px;
+  }
+  .autoplay-progress {
+    width: 24px;
+    height: 24px;
+  }
+  .autoplay-progress span {
+    font-size: 10px;
+  }
+  .swiper-button-prev:after,
+  .swiper-button-next:after {
+    font-size: 25px !important;
+    font-weight: bold !important;
+  }
+}
